--- a/python/Django/tango_with_django_project/.gitignore
+++ b/python/Django/tango_with_django_project/.gitignore
@@ -1,4 +1,2 @@
-tango_with_django_project/__init__.pyc
-tango_with_django_project/settings.pyc
-tango_with_django_project/urls.pyc
-tango_with_django_project/*.pyc
+*.pyc
+db.sqlite3
