split code into separate files, add varibables to makefile

--- a/cpp/makefile/Makefile
+++ b/cpp/makefile/Makefile
@@ -1,5 +1,10 @@
-converter: strctfun.o
-	g++ -o converter strctfun.o
+CC=g++
+CFLAGS=-Wall
+MAIN_NAME=main
+objects=main.o coordin.o
 
-strctfun.o: strctfun.cpp
-	g++ -c strctfun.cpp
+main: $(objects)
+	$(CC) $(CFLAGS) -o $(MAIN_NAME) $(objects)
+
+clean:
+	rm -f $(MAIN_NAME) $(objects)
