--- a/js/electron/spendings/package.json
+++ b/js/electron/spendings/package.json
@@ -14,6 +14,9 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0"
   }
 }
