--- a/rust/advent-of-code/day11/Cargo.toml
+++ b/rust/advent-of-code/day11/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itermore = "0.5.0"
+nom = "7.1.1"
+
+[dev-dependencies]
 rstest = "0.16.0"
