--- a/mikrus/docker-compose.yml
+++ b/mikrus/docker-compose.yml
@@ -1,6 +1,6 @@
 # nginx reverse proxy
 
-version: '3.8'
+version: '3.3'
 services:
   nginx:
     image: nginx:latest
@@ -10,7 +10,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - type: bind
-        source: ./nginx.conf
-        target: /etc/nginx/nginx.conf
+      # - type: bind
+      #   source: ./nginx.conf
+      #   target: /etc/nginx/nginx.conf
       - ./certs:/etc/nginx/certs
