--- a/mikrus/nginx/sites-enabled/kukbuk.conf
+++ b/mikrus/nginx/sites-enabled/kukbuk.conf
@@ -12,7 +12,8 @@ server {
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
 		#try_files $uri $uri/ =404;
-		proxy_pass http://localhost:5000/;
+		;proxy_pass http://localhost:5000/;
+		proxy_pass http://host.docker.internal:5000/;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "Upgrade";
