--- a/mikrus/docker-compose.yml
+++ b/mikrus/docker-compose.yml
@@ -6,13 +6,11 @@ services:
     image: nginx:latest
     container_name: nginx
     restart: always
-    ports:
-      - "80:80"
-      - "443:443"
+    network_mode: "host"  # Use host networking to bind to the host's network stack
+    # ports:  # ports are commented out because of the network_mode: "host"
+    #   - "80:80"
+    #   - "443:443"
     volumes:
-      # - type: bind
-      #   source: ./nginx.conf
-      #   target: /etc/nginx/nginx.conf
       - ./certs:/etc/nginx/certs
       - ./nginx:/etc/nginx
       - /etc/letsencrypt:/etc/letsencrypt
