Add hosting of staticfiles

--- a/mikrus/nginx/sites-enabled/gtrack.conf
+++ b/mikrus/nginx/sites-enabled/gtrack.conf
@@ -23,10 +23,10 @@ server {
     # Optional: If you have static files specific to gtrack.umat.pl that Nginx should serve directly
     # (e.g., CSS, JS, images not handled by your app on port 8000), you can add another location block.
     # Example:
-    # location /static/ {
-    #     alias /var/www/gtrack/static/; # Make sure this path exists on your VPS
-    #     autoindex on; # Or off, depending on your preference
-    # }
+    location /static/ {
+        alias /var/www/gtrack/static/; # Make sure this path exists on your VPS
+        autoindex on; # Or off, depending on your preference
+    }
 
     # Access and error logs for this specific virtual host.
     # It's good practice to have separate logs per site.
